// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`autocomplete > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > limits displayed options when maxItems is set 1`] = `
[
  "[?25l",
  "│
◆  Select an option
│
│  Search: _
│  ● Option 0
│  ○ Option 1
│  ○ Option 2
│  ○ Option 3
│  ○ Option 4
│  ...
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[1B",
  "[J",
  "◇  Select an option
│  Option 0",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > renders initial UI with message and instructions 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "◇  Select a fruit
│  Apple",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > renders placeholder if set 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: Type to search...
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "◇  Select a fruit
│  Apple",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > shows hint when option has hint and is focused 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[3B",
  "[J",
  "│  Search:
│  ○ Apple
│  ● Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[5B",
  "[J",
  "│  ○ Banana
│  ● Cherry
│  ○ Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[6B",
  "[J",
  "│  ○ Cherry
│  ● Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[7B",
  "[J",
  "│  ○ Grape
│  ● Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[8B",
  "[J",
  "│  ○ Orange
│  ● Kiwi (New Zealand)
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[1B",
  "[J",
  "◇  Select a fruit
│  Kiwi",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > shows no matches message when search has no results 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[3B",
  "[J",
  "│  Search: z█ (0 matches)
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  Select a fruit
│",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > shows selected value in submit state 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[3B",
  "[J",
  "│  Search:
│  ○ Apple
│  ● Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "◇  Select a fruit
│  Banana",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > shows strikethrough in cancel state 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "■  Select a fruit
│",
  "
",
  "[?25h",
]
`;

exports[`autocomplete > supports initialValue 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│
│  Search: _
│  ○ Apple
│  ○ Banana
│  ● Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "◇  Select a fruit
│  Cherry",
  "
",
  "[?25h",
]
`;

exports[`autocompleteMultiselect > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo

│  Search: _
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "
",
  "[?25h",
]
`;

exports[`autocompleteMultiselect > can use navigation keys to select options 1`] = `
[
  "[?25l",
  "│
◆  Select fruits

│  Search: _
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[3B",
  "[J",
  "│  Search: 
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Space/Tab: select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[5B",
  "[2K[G",
  "│  ◼ Banana",
  "[5B",
  "[999D[10A",
  "[6B",
  "[2K[G",
  "│  ◼ Cherry",
  "[4B",
  "[999D[10A",
  "[1B",
  "[J",
  "◇  Select fruits
│  2 items selected",
  "
",
  "[?25h",
]
`;

exports[`autocompleteMultiselect > renders error when empty selection & required is true 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit

│  Search: _
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "▲  Select a fruit

│  Search: _
│  Please select at least one item
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "[999D[11A",
  "[1B",
  "[J",
  "◆  Select a fruit

│  Search: _
│  ◼ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "[999D[10A",
  "[1B",
  "[J",
  "◇  Select a fruit
│  1 items selected",
  "
",
  "[?25h",
]
`;
